[package]
name = "gba-addresses"
description = "Exports address values of the GBA memory map locations."
repository = "https://github.com/rust-console/gba-addresses"
version = "0.0.1"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"
keywords = ["gba"]

[dependencies]
# none!
